# unicruft

./: ChangeLog  Common.am  MANIFEST  MANIFEST.SKIP  META.yml  MYMETA.json  MYMETA.yml  Makefile.PL  Makefile.am  README  README.html  README.pod  README.rpod  README.txt  Unicruft.pm  Unicruft.xs  autoreconf.sh  benchit.perl  configure.ac  distcheck.sh  moopod.css  reversion.sh  svntag.rc  test-lat1.txt  test-utf8.txt  unicruft.pc.in  utf8-to-latin1-de.perl
doc/: Makefile.am
doc/libunicruft/: Makefile.am  libunicruft-header.html  libunicruft.doxy.in  mainpage.dox.in
doc/programs/: Makefile.am  unicruft.1  unicruft.html  unicruft.pod
examples/: l2u.c  u2l.c
m4/: ax_arg_distcheck.m4  ax_check_debug.m4  ax_check_expat.m4  ax_check_perl.m4  ax_check_pkgconfig.m4  ax_check_zlib.m4  ax_doc.m4
perl/: MANIFEST  Makefile.PL  README.txt  Unicruft.pm  Unicruft.xs  ex2.chr.xml  reversion.sh  svntag.rc  testme.perl  utf8-to-latin1-de.perl
perl-alien/: META.json  MYMETA.yml  svntag.rc
perl/t/: .cvsignore
src/: Makefile.am  config.h  filter-main.c  filter-main.h  latin1-to-utf8.c  test-ascii.txt  test-latin1-u8.txt  test-latin1.txt  test-utf8.txt  unicruft.gog  unicruft.h  unicruft_cmdparser.c  unicruft_cmdparser.h  unicruft_main.c  utf8-de-pp.c  utf8-to-ascii.c  utf8-to-latin1-de.c  utf8-to-latin1.c  uxBuffer.c  uxBuffer.h  uxCommon.h  uxConfig.h  uxDEpp.c  uxDEpp.h  uxDEyy.c  uxDEyy.h  uxDEyy.l  uxTableAscii.c  uxTableLatin1.c  uxUnidecode.c  uxUnidecode.h  uxUtf8.c  uxUtf8.h
